- 
    
Bug
 - 
    Resolution: Done
 - 
    
P3: Somewhat important
 - 
    Qt Creator 4.12.3
 - 
    None
 
- 
        
 - 
        502ad9badb73119fccea48c9c19413dea1e87493 (qt-creator/qt-creator/4.13)
 
Selected run configuration is not used when I run application from 'Test Results' panel. I wasn't able to find any other way to choose run configuration for tests. Please extend documentation if it is there.
Steps to reproduce:
 1) select the run configuration
 2) run test from 'Test Results'

Expected behaviour:
 './untitled6-tests -xml' is started
Current behaviour:
 './untitled -xml' is started
Workaround:
 rename untitled6-tests target to auntitled6-tests to move it to the top of the list.
The test application untitled6 is attached as untitled6.tar.gz
- relates to
 - 
                    
QTCREATORBUG-23332 [CMakeProjectManager] full ctest support
-         
 - Closed
 
 -         
 
| For Gerrit Dashboard: QTCREATORBUG-24268 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 306426,2 | AutoTest: Correct completing test run configuration | 4.13 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |